# moniepoint-dreamdevs-analytics-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: DATABASE_SETUP.md  INSTALL.md  RUN_API.md
src/: __init__.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: analytics.py
src/core/: __init__.py  config.py  deps.py
src/db/: __init__.py  base.py
src/models/: __init__.py  activity.py
src/schemas/: __init__.py  analytics.py
src/scripts/: __init__.py  import_activities.py
src/services/: __init__.py  analytics.py
tests/: conftest.py
tests/api/v1/: test_endpoints.py
tests/services/: test_analytics_service.py
